# OpenCL_benchmark

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  ocl_build.sh  ocl_build_win_x86.sh  ocl_build_x86.sh
clcode/: benchmark_bandwidth_buffer.cl  benchmark_bandwidth_sharememory.cl  benchmark_peak.cl  benchmark_peak_v2.cl  benchmark_peak_v3.cl  demo.cl  gemm_fp16_plain.cl  gemm_fp16_v2.cl
tools/: cl_bandwidth.cc  cl_gemm_fp16.cc  cl_peak.cc  fp16_diff.cc  fp16_diff.h
